Win conditions and game over consequences Fix JavaScript lines that check if tile has been played in before Create scoreboard and show it when start game button is pressed Create game info container and style to center text Create check for tie scenario and specific win scenario Create consequences for game over Style markers slightly bigger Style button container gap Create hard variables for each header button

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,11 @@ h1, h2, h3, h4, h5, h6 {
     gap: 5px;
 }
 
+.header-svg {
+    min-width: 50px;
+    width: 50px;
+}
+
 .player-form-item-container > input {
     font-size: 1.2rem;
     width: 15ch;
@@ -119,6 +124,11 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 4rem;
 }
 
+#button-container {
+    display: flex;
+    gap: 50px;
+}
+
 .header-button {
     font-size: 2rem;
     border: outset;
@@ -127,7 +137,8 @@ h1, h2, h3, h4, h5, h6 {
 
 /* Main */
 
-#turn-indicator-text {
+#game-info-container {
+    text-align: center;
     font-size: 2rem;
 }
 
@@ -158,6 +169,5 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .x-marker, .o-marker {
-    min-width: 50px;
-    width: 50px;
+    width: 120px;
 }
